[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/menu_header/styleboxflat_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://gui/menu/menu_header.gd" type="Script" id=2]
[ext_resource path="res://themes/theme_main_square_button.tres" type="Theme" id=3]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/minimise.svg-f291a447e9a63cc54c193ab85c971a52.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/x.svg-47a3a67eca4bee58f25f23dd32e35e3d.stex"

[node name="MenuHeader" type="PanelContainer"]
margin_right = 1920.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 31 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "no_translate.menu_title"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1918.0
margin_bottom = 29.0
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 3
custom_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 1.0
margin_right = 1914.0
margin_bottom = 26.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
visible = false
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 1853.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "no_translate.menu_title"
align = 1
valign = 1

[node name="ButtonMinimize" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 1857.0
margin_right = 1882.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 0 )
hint_tooltip = "gui.menu.minimize"
theme = ExtResource( 3 )
clip_text = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ButtonMinimize"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = -0.0992432
margin_right = -0.0992432
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClose" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 1886.0
margin_right = 1911.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 0 )
hint_tooltip = "gui.menu.close"
theme = ExtResource( 3 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ButtonClose"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = 0.0992432
margin_right = 0.0992432
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
